--- a/WDC_Emission.html
+++ b/WDC_Emission.html
@@ -16,7 +16,7 @@
     <div class="container container-table">
         <div class="row vertical-center-row">
             <div class="text-center col-md-4 col-md-offset-4">
-                <button type="button" id="submitButton" class="btn btn-success" style="margin: 10px;">Real time Air Quality Index Data!</button>
+                <button type="button" id="submitButton" class="btn btn-success" style="margin: 10px;">Real time Gobal Mean temperature!</button>
             </div>
         </div>
     </div>
