--- a/GenrateCalender.html
+++ b/GenrateCalender.html
@@ -17,14 +17,15 @@
         <div class="row vertical-center-row">
             <div class="text-center col-md-4 col-md-offset-4">
             <form>
-                <label>For Year</label>
+                <label>From Year</label>
                 <input type="number" class="form-control" id="start-year"><br>
                 <label>To Year</label>
                 <input type="number" class="form-control" id="end-year"><br>
             </form>
             <button type="button" id="submitButton" class="btn btn-success" style="margin: 10px;">Genrate Date</button>
-            </div>
             <div id="errorMsg"></div>
+            </div>
+           
 
         </div>
     </div>
