--- a/GenrateCalender.html
+++ b/GenrateCalender.html
@@ -13,19 +13,22 @@
 </head>
 
 <body>
+    <h2>Genrate Calender Date for any given years</h2>
+    <p>Tableau Web Data Connector to genrate Calender Date for any number of years. 
+        It can be used along with anyother datasource for creaating diffrent calednders such as Holiday calender or Event calender. 
+        For sample usecase refer Url https://public.tableau.com/app/profile/vishal.shukla/viz/CalenderSample/Calender</p>
     <div class="container container-table">
         <div class="row vertical-center-row">
             <div class="text-center col-md-4 col-md-offset-4">
             <form>
-                <label>From Year</label>
+                <label>For Year</label>
                 <input type="number" class="form-control" id="start-year"><br>
                 <label>To Year</label>
                 <input type="number" class="form-control" id="end-year"><br>
             </form>
             <button type="button" id="submitButton" class="btn btn-success" style="margin: 10px;">Genrate Date</button>
-            <div id="errorMsg"></div>
             </div>
-           
+            <div id="errorMsg"></div>
 
         </div>
     </div>
